--- a/models/northwind/sources.yml
+++ b/models/northwind/sources.yml
@@ -12,3 +12,7 @@ sources:
             tests:
               - unique
               - not_null
+      - name: public_shippers
+      - name: public_suppliers
+      - name: public_products
+      - name: public_order_details
