--- a/models/staging/sources.yml
+++ b/models/staging/sources.yml
@@ -13,3 +13,4 @@ sources:
       - name: sales_salesorderheadersalesreason
       - name: sales_salesreason
       - name: sales_salesterritory
+      - name: person_stateprovince
